[package]
description = "Конвертер текстовых файлов в диаграммы с помощью kroki"
edition = "2024"
homepage = "https://github.com/Konstantin-Dudersky/kroki-conv"
license = "GPL-3.0"
name = "kroki-conv"
repository = "https://github.com/Konstantin-Dudersky/kroki-conv"
version = "0.0.1"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
notify = "8.2.0"
reqwest = "0.12.23"
thiserror = "2.0.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
